# recipes-manager

./: .gitignore  coverage_config.py  pyproject.toml  pytest.ini  run_coverage.py
base/templates/: example.html
core/: models.py  settings.py  urls.py
recipes/: admin.py  models.py  urls.py  views.py
recipes/migrations/: 0001_initial.py  0002_alter_recipe_cover_alter_recipe_deleted_at_and_more.py  0003_remove_recipe_deleted_at_alter_recipe_author_and_more.py  0004_recipe_deleted_at_recipe_is_active_recipe_is_deleted_and_more.py
recipes/services/: recipe_service.py
recipes/static/recipes/css/: styles.css
recipes/templates/: base.html
recipes/templates/recipes/: index.html
recipes/templates/recipes/pages/: category.html  detail.html  index.html  search.html
recipes/templates/recipes/partials/: _footer.html  _head.html  _header.html  _recipes.html  _search.html
recipes/tests/: test_recipes_base.py  test_recipes_models.py  test_recipes_urls.py  test_recipes_views.py
recipes/utils/: factory.py
static/recipes/css/: styles.css
